--- a/foodAgri/src/app/app.component.html
+++ b/foodAgri/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<main role="main" class="container">
-  <app-alerts></app-alerts>
-  <router-outlet></router-outlet>
-</main>
+<app-acceuil></app-acceuil>
+<app-footer></app-footer>
