--- a/foodAgri/src/app/header/header.component.html
+++ b/foodAgri/src/app/header/header.component.html
@@ -16,21 +16,13 @@
       </ul>
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" href="https://docs.microsoft.com/graph/overview" target="_blank">
-            <fa-icon [icon]="[ 'fas', 'external-link-alt' ]" class="mr-1"></fa-icon>Docs
+          <a  class="nav-link" routerLink="/doc" target="_blank">
+           Docs
           </a>
         </li>
         <li *ngIf="authenticated" ngbDropdown placement="bottom-right" class="nav-item">
           <a ngbDropdownToggle id="userMenu" class="nav-link" href="javascript:undefined" role="button" aria-haspopup="true"
             aria-expanded="false">
-            <div *ngIf="user.avatar; then userAvatar else defaultAvatar"></div>
-            <ng-template #userAvatar>
-              <img src="user.avatar" class="rounded-circle align-self-center mr-2" style="width: 32px;">
-            </ng-template>
-            <ng-template #defaultAvatar>
-              <fa-icon [icon]="[ 'far', 'user-circle' ]" fixedWidth="true" size="lg"
-                class="rounded-circle align-self-center mr-2"></fa-icon>
-            </ng-template>
           </a>
           <div ngbDropdownMenu aria-labelledby="userMenu">
             <h5 class="dropdown-item-text mb-0">{{user.displayName}}</h5>
@@ -40,10 +32,17 @@
           </div>
         </li>
         <li *ngIf="!authenticated" class="nav-item">
-          <a class="nav-link" href="javascript:undefined" role="button" (click)="signIn()" (click)="toggleForm()" [attr.aria-expanded]="showForm">Sign In</a>
+          <form #loginForm = "ngForm" (ngSubmit)="onSubmit(loginForm.value)" >
+            <input type = "text" name = "email" placeholder = "email" ngModel>
+            <br/>
+            <input type = "password" name = "pwd" placeholder = "password" ngModel>
+            <br/>
+            <input type = "submit" value = "connexion" (click)="toggleForm()">
+          </form>
+
         </li>
-        <li><app-authent></app-authent></li>
       </ul>
+
     </div>
   </div>
 </nav>
