ajout de jqwidget

--- a/foodAgri/src/app/acceuil/acceuil.component.html
+++ b/foodAgri/src/app/acceuil/acceuil.component.html
@@ -21,6 +21,8 @@
   <div *ngIf="authenticated">vous êtes authentifié</div>
 </div>
 
+<app-calculatrice></app-calculatrice>
+
 <div  *ngFor="let culture of cultures" class="card" style="width: 18rem;">
   <div class="card-body">
         <h1>{{culture.idMetier}}</h1>
