--- a/foodAgri/src/app/app.component.html
+++ b/foodAgri/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
 <app-acceuil></app-acceuil>
 <app-footer></app-footer>
+<jqxBarGauge
+    [width]="600" [height]="600" [max]="150"
+    [colorScheme]="'scheme02'" [values]="values">
+</jqxBarGauge>
