calcul et ration mieux agencé

--- a/foodAgri/src/app/app.component.html
+++ b/foodAgri/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-acceuil></app-acceuil>
+<app-ration></app-ration>
 <app-footer></app-footer>
 <jqxBarGauge
     [width]="600" [height]="600" [max]="150"
