--- a/foodAgri/src/app/acceuil/acceuil.component.html
+++ b/foodAgri/src/app/acceuil/acceuil.component.html
@@ -1,27 +1,16 @@
-<div class="card" style="width: 18rem;">
-  <img src="assets\image\genice.JPG" class="card-img-top" alt="genice">
-  <div class="card-body">
-    <h5 class="card-title">Ration pour génices</h5>
-    <p class="card-text">Calcul de rations spécifiques pour les génices.</p>
-    <a href="#" class="btn btn-primary">Calcul</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="assets\image\tarie.jpg" class="card-img-top" alt="tarie">
-  <div class="card-body">
-    <h5 class="card-title">Ration pour taries</h5>
-    <p class="card-text">Calcul de rations spécifiques pour les taries.</p>
-    <a href="#" class="btn btn-primary">Calcul</a>
-  </div>
-</div>
-
 <div class="jumbotron">
-  <h1>Bienvenue sur votre site spécialisé</h1>
-  <p class="lead">Découvrez toutes les possibilités de ce site</p>
+  <h1>Ration pour vaches laitières, génices et taries</h1>
   <div *ngIf="authenticated">vous êtes authentifié</div>
 </div>
 
-<app-calculatrice></app-calculatrice>
+<div class="card" style="width: 18rem;">
+  <img src="assets\image\tarie.jpg" class="card-img-top" alt="laitière">
+  <div class="card-body">
+    <h5 class="card-title">Ration pour vaches laitières</h5>
+    <p class="card-text">Calcul de rations spécifiques pour les vaches laitières.</p>
+    <a routerLink="/ration" class="btn btn-primary">Calcul</a>
+  </div>
+</div>
 
 <div  *ngFor="let culture of cultures" class="card" style="width: 18rem;">
   <div class="card-body">
