Ration avec pie

--- a/foodAgri/src/app/app.component.html
+++ b/foodAgri/src/app/app.component.html
@@ -1,7 +1,3 @@
-<app-header></app-header>
+<app-header class="fixed-top"></app-header>
 <app-ration></app-ration>
 <app-footer></app-footer>
-<jqxBarGauge
-    [width]="600" [height]="600" [max]="150"
-    [colorScheme]="'scheme02'" [values]="values">
-</jqxBarGauge>
