--- a/foodAgri/src/app/app.component.html
+++ b/foodAgri/src/app/app.component.html
@@ -1,3 +1,2 @@
-<app-header class="fixed-top"></app-header>
-<app-ration></app-ration>
-<app-footer></app-footer>
+<app-header></app-header>
+<app-ration><app-ration>
