--- a/foodAgri/src/app/header/header.component.html
+++ b/foodAgri/src/app/header/header.component.html
@@ -11,7 +11,10 @@
           <a routerLink="/" class="nav-link" routerLinkActive="active">Acceuil</a>
         </li>
         <li *ngIf="authenticated" class="nav-item">
-          <a routerLink="/ration" class="nav-link" routerLinkActive="active">Calcul de ration</a>
+          <a href="/ration" class="nav-link" routerLinkActive="active">Calcul de ration</a>
+        </li>
+        <li *ngIf="authenticated" class="nav-item">
+          <a routerLink="/dashboard" class="nav-link" routerLinkActive="active">feuille de route</a>
         </li>
       </ul>
       <ul class="navbar-nav justify-content-end">
@@ -19,7 +22,7 @@
           <a routerLink="/calculatrice" class="nav-link" routerLinkActive="active">Calculatrice</a>
         </li>
         <li class="nav-item">
-          <a  class="nav-link" routerLink="/doc" target="_blank">
+          <a  class="nav-link" routerLink="/doc" target="_self">
            Docs
           </a>
         </li>
@@ -36,9 +39,9 @@
         </li>
         <li *ngIf="!authenticated" class="nav-item">
           <form #loginForm = "ngForm" (ngSubmit)="onSubmit(loginForm.value)" >
-            <input type = "text" name = "email" placeholder = "email" ngModel>
+<!--             <input type = "text" name = "email" placeholder = "email" ngModel>
             <br/>
-            <input type = "password" name = "pwd" placeholder = "password" ngModel>
+            <input type = "password" name = "pwd" placeholder = "password" ngModel> -->
             <br/>
             <input type = "submit" value = "connexion" (click)="toggleForm()">
           </form>
